Add api using sphinx_autosummary_accessors

--- a/ci/doc.yml
+++ b/ci/doc.yml
@@ -15,3 +15,4 @@ dependencies:
   - pip:
       - cf_xarray
       - sphinx-book-theme
+      - git+https://github.com/keewis/sphinx-autosummary-accessors
