--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -59,4 +59,4 @@ jobs:
           python -m pip install isort
       - name: isort check
         run: |
-          isort --recursive --check-only .
+          isort --check-only .
