--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,42 @@
 # https://pre-commit.com/
 repos:
+  - repo: https://github.com/asottile/seed-isort-config
+    rev: v2.2.0
+    hooks:
+      - id: seed-isort-config
+
   # isort should run before black as black sometimes tweaks the isort output
   - repo: https://github.com/timothycrosley/isort
-    rev: 5.0.4
+    rev: 5.0.9
     hooks:
       - id: isort
         files: .+\.py$
+
   # https://github.com/python/black#version-control-integration
   - repo: https://github.com/python/black
     rev: 19.10b0
     hooks:
       - id: black
+
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.3
     hooks:
       - id: flake8
+
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.782  # Must match ci/requirements/*.yml
     hooks:
       - id: mypy
+
+  - repo: https://github.com/deathbeds/prenotebook
+    rev: f5bdb72a400f1a56fe88109936c83aa12cc349fa
+    hooks:
+       - id: prenotebook
+
+  - repo: https://github.com/myint/rstcheck
+    rev: 3f92957478422df87bd730abde66f089cc1ee19b
+    hooks:
+        - id: rstcheck
   # run this occasionally, ref discussion https://github.com/pydata/xarray/pull/3194
   # - repo: https://github.com/asottile/pyupgrade
   #   rev: v1.22.1
