--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,38 @@ on:
       - "*"
 
 jobs:
+  upstream-dev:
+    name: upstream-dev
+    runs-on: "ubuntu-latest"
+    steps:
+    - uses: actions/checkout@v2
+      - name: Cache conda
+        uses: actions/cache@v1
+        env:
+          # Increase this value to reset cache if ci/upstream-dev-env.yml has not changed
+          CACHE_NUMBER: 0
+        with:
+          path: ~/conda_pkgs_dir
+          key: ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{ hashFiles('ci/upstream-dev-env.yml') }}
+      - uses: goanpeca/setup-miniconda@v1
+        with:
+          activate-environment: cf_xarray_test # Defined in ci/environment.yml
+          auto-update-conda: false
+          python-version: 3.8
+          environment-file: ci/upstream-dev-env.yml
+          use-only-tar-bz2: true # IMPORTANT: This needs to be set for caching to work properly!
+      - name: Set up conda environment
+        shell: bash -l {0}
+        run: |
+          python -m pip install -e .
+          conda list
+
+      - name: Run Tests
+        shell: bash -l {0}
+        run: |
+          pytest
+
+
   build:
     name: Build (${{ matrix.python-version }}, ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
