--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,7 +34,7 @@ repos:
        - id: prenotebook
 
   - repo: https://github.com/myint/rstcheck
-    rev: 3f92957478422df87bd730abde66f089cc1ee19b
+    rev: master
     hooks:
         - id: rstcheck
   # run this occasionally, ref discussion https://github.com/pydata/xarray/pull/3194
