unpin pandas in upstream-dev-env

--- a/ci/upstream-dev-env.yml
+++ b/ci/upstream-dev-env.yml
@@ -7,6 +7,6 @@ dependencies:
   - dask
   - matplotlib
   - netcdf4
-  - pandas < 1.1.0
+  - pandas
   - pip:
     - git+https://github.com/pydata/xarray
