Update isort cfg.

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,13 +36,11 @@ exclude=
     doc
 
 [isort]
+profile = black
+skip_gitignore = true
+force_to_top = true
 default_section = THIRDPARTY
 known_first_party = cf_xarray
-multi_line_output = 3
-include_trailing_comma = True
-force_grid_wrap = 0
-use_parentheses = True
-line_length = 88
 known_third_party = dask,matplotlib,numpy,pandas,pytest,setuptools,sphinx_autosummary_accessors,xarray
 
 # Most of the numerical computing stack doesn't have type annotations yet.
