--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,24 +7,24 @@ repos:
 
   # isort should run before black as black sometimes tweaks the isort output
   - repo: https://github.com/timothycrosley/isort
-    rev: 5.0.9
+    rev: 5.6.4
     hooks:
       - id: isort
         files: .+\.py$
 
   # https://github.com/python/black#version-control-integration
   - repo: https://github.com/python/black
-    rev: 19.10b0
+    rev: 20.8b1
     hooks:
       - id: black
 
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.3
+    rev: 3.8.4
     hooks:
       - id: flake8
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.782  # Must match ci/requirements/*.yml
+    rev: v0.790  # Must match ci/requirements/*.yml
     hooks:
       - id: mypy
 
@@ -34,7 +34,7 @@ repos:
        - id: prenotebook
 
   - repo: https://github.com/myint/rstcheck
-    rev: master
+    rev: 3f92957478422df87bd730abde66f089cc1ee19b
     hooks:
         - id: rstcheck
   # run this occasionally, ref discussion https://github.com/pydata/xarray/pull/3194
