--- a/ci/doc.yml
+++ b/ci/doc.yml
@@ -14,6 +14,6 @@ dependencies:
   - ipython
   - ipykernel
   - pandas
+  - pydata-sphinx-theme
   - pip:
       - git+https://github.com/xarray-contrib/cf-xarray
-      - sphinx-book-theme
