--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,9 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/_build/
+doc/_build/
+doc/generated/
+cf_xarray/tests/_build/
 
 # PyBuilder
 target/
