add criteria in index

--- a/setup.cfg
+++ b/setup.cfg
@@ -117,5 +117,5 @@ nobeep = True
 
 [rstcheck]
 ignore_roles=pr,issue
-ignore_directives=ipython,autodata
+ignore_directives=ipython,autodata,csv-table
 ignore_messages=(is not referenced\.$)
