--- a/setup.cfg
+++ b/setup.cfg
@@ -116,6 +116,7 @@ test = pytest
 nobeep = True
 
 [rstcheck]
+report=warning
 ignore_roles=pr,issue,py:meth,py:attr
 ignore_directives=ipython,autodata,csv-table
 ignore_messages=(is not referenced\.$)
