--- a/ci/doc.yml
+++ b/ci/doc.yml
@@ -14,6 +14,7 @@ dependencies:
   - sphinx-autosummary-accessors
   - ipython
   - ipykernel
+  - ipywidgets
   - pandas
   - pydata-sphinx-theme
   - pip:
