--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,26 +7,27 @@ repos:
 
   # isort should run before black as black sometimes tweaks the isort output
   - repo: https://github.com/timothycrosley/isort
-    rev: 5.7.0
+    rev: 5.9.3
     hooks:
       - id: isort
         files: .+\.py$
 
   # https://github.com/python/black#version-control-integration
   - repo: https://github.com/python/black
-    rev: 20.8b1
+    rev: 21.7b0
     hooks:
       - id: black
 
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.3
+    rev: 3.9.2
     hooks:
       - id: flake8
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.800  # Must match ci/requirements/*.yml
+    rev: v0.910
     hooks:
-      - id: mypy
+       - id: mypy
+         additional_dependencies: [types-all]
 
   - repo: https://github.com/deathbeds/prenotebook
     rev: f5bdb72a400f1a56fe88109936c83aa12cc349fa
@@ -37,6 +38,7 @@ repos:
     rev: 3f92957478422df87bd730abde66f089cc1ee19b
     hooks:
         - id: rstcheck
+
   # run this occasionally, ref discussion https://github.com/pydata/xarray/pull/3194
   # - repo: https://github.com/asottile/pyupgrade
   #   rev: v1.22.1
