--- a/ci/upstream-dev-env.yml
+++ b/ci/upstream-dev-env.yml
@@ -10,6 +10,7 @@ dependencies:
   - netcdf4
   - pandas
   - pooch
+  - shapely
   - pip:
     - git+https://github.com/pydata/xarray
     - git+https://github.com/hgrecco/pint
