add xarray as a dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ install_requires =
     numpy >= 1.15
     pandas >= 0.25
     setuptools >= 41.2  # For pkg_resources
+    xarray
 setup_requires =
     setuptools >= 41.2
     setuptools_scm
