remove pkg_resources

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,6 @@ python_requires = >=3.6
 install_requires =
     numpy >= 1.15
     pandas >= 0.25
-    setuptools >= 41.2  # For pkg_resources
     xarray
 setup_requires =
     setuptools >= 41.2
@@ -42,7 +41,7 @@ skip_gitignore = true
 force_to_top = true
 default_section = THIRDPARTY
 known_first_party = cf_xarray
-known_third_party = dask,matplotlib,numpy,pandas,pint,pkg_resources,pytest,setuptools,sphinx_autosummary_accessors,xarray
+known_third_party = dask,matplotlib,numpy,pandas,pint,pytest,setuptools,sphinx_autosummary_accessors,xarray
 
 # Most of the numerical computing stack doesn't have type annotations yet.
 [mypy-affine.*]
