--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,16 @@
 graft cf_xarray/data
+exclude cf_xarray/_version.py
+
+prune ci
+prune doc
+prune *.egg-info
+prune .binder/
+prune .github/
+
+exclude CITATION.cff
+exclude .deepsource.toml
+exclude .tributors
+exclude .zenodo.json
+exclude *.yml
+exclude *.yaml
+exclude .gitignore
