single source for metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 name = cf_xarray
 license = Apache
 url = https://github.com/xarray-contrib/cf-xarray
+description = A lightweight convenience wrapper for using CF attributes on xarray objects
 
 [options]
 packages = cf_xarray
