--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = cf_xarray
 license = Apache
-url = https://github.com/xarray-contrib/cf-xarray
+url = https://cf-xarray.readthedocs.io
 description = A lightweight convenience wrapper for using CF attributes on xarray objects
 
 [options]
