make sure `pint` is installed into the docs environment

--- a/ci/doc.yml
+++ b/ci/doc.yml
@@ -17,6 +17,7 @@ dependencies:
   - ipywidgets
   - pandas
   - pooch
+  - pint
   - pip:
       - git+https://github.com/xarray-contrib/cf-xarray
       - myst_nb
