--- a/ci/doc.yml
+++ b/ci/doc.yml
@@ -9,7 +9,7 @@ dependencies:
   - pooch
   - xarray
   - sphinx
-  - nbsphinx
+  - sphinx-copybutton
   - numpydoc
   - sphinx-autosummary-accessors
   - ipython
