--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,7 +22,7 @@ repos:
     rev: v0.910
     hooks:
        - id: mypy
-         additional_dependencies: [types-all]
+         additional_dependencies: [types-all, xarray]
 
   - repo: https://github.com/deathbeds/prenotebook
     rev: f5bdb72a400f1a56fe88109936c83aa12cc349fa
