--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,24 +1,14 @@
-# .readthedocs.yml
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
 # Required
 version: 2
 
 build:
-  image: stable
+  os: 'ubuntu-20.04'
+  tools:
+    python: 'mambaforge-4.10'
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: doc/conf.py
-
-# Build documentation with MkDocs
-#mkdocs:
-#  configuration: mkdocs.yml
-
-# Optionally build your docs in additional formats such as PDF
-# formats:
-#   - pdf
 
 # Optionally set the version of Python and requirements required to build your docs
 conda:
