--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,14 +2,12 @@ ci:
     autoupdate_schedule: quarterly
 
 repos:
-  # isort should run before black as black sometimes tweaks the isort output
   - repo: https://github.com/PyCQA/isort
     rev: 5.10.1
     hooks:
       - id: isort
         files: .+\.py$
 
-  # https://github.com/python/black#version-control-integration
   - repo: https://github.com/psf/black
     rev: 22.3.0
     hooks:
@@ -26,22 +24,49 @@ repos:
        - id: mypy
          additional_dependencies: [types-all]
 
-  - repo: https://github.com/deathbeds/prenotebook
-    rev: f5bdb72a400f1a56fe88109936c83aa12cc349fa
-    hooks:
-       - id: prenotebook
-
   - repo: https://github.com/myint/rstcheck
     rev: 3f92957478422df87bd730abde66f089cc1ee19b
     hooks:
         - id: rstcheck
 
-  # run this occasionally, ref discussion https://github.com/pydata/xarray/pull/3194
-  # - repo: https://github.com/asottile/pyupgrade
-  #   rev: v1.22.1
-  #   hooks:
-  #     - id: pyupgrade
-  #       args:
-  #         - "--py3-only"
-  #         # remove on f-strings in Py3.7
-  #         - "--keep-percent-format"
+  - repo: https://github.com/executablebooks/mdformat
+    rev: 0.7.14
+    hooks:
+    - id: mdformat
+      additional_dependencies:
+        - mdformat-black
+        - mdformat-myst
+
+  - repo: https://github.com/nbQA-dev/nbQA
+    rev: 1.3.1
+    hooks:
+        - id: nbqa-black
+        - id: nbqa-pyupgrade
+          args: [--py37-plus]
+        - id: nbqa-isort
+        - id: nbqa
+          entry: nbqa mdformat
+          name: nbqa-mdformat
+          alias: nbqa-mdformat
+          additional_dependencies: [mdformat==0.7.14]
+
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.31.1
+    hooks:
+     - id: pyupgrade
+       args:
+         - "--py37-plus"
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.1.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-toml
+      - id: check-yaml
+
+  - repo: https://github.com/keewis/blackdoc
+    rev: v0.3.4
+    hooks:
+      - id: blackdoc
+        files: .+\.py$
