Add test. Typing is a mess.

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,8 @@ known_first_party = cf_xarray
 known_third_party = dask,matplotlib,numpy,pandas,pint,pytest,setuptools,sphinx_autosummary_accessors,xarray
 
 # Most of the numerical computing stack doesn't have type annotations yet.
+[mypy]
+allow_redefinition = True
 [mypy-affine.*]
 ignore_missing_imports = True
 [mypy-bottleneck.*]
