--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,6 +60,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+            # need to fetch all tags to get a correct version
+            fetch-depth: 0  # fetch all branches and tags
       - uses: conda-incubator/setup-miniconda@v2
         with:
           channels: conda-forge
@@ -83,6 +86,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+            # need to fetch all tags to get a correct version
+            fetch-depth: 0  # fetch all branches and tags
       - uses: conda-incubator/setup-miniconda@v2
         with:
           channels: conda-forge
