--- a/.github/workflows/upstream-dev-ci.yaml
+++ b/.github/workflows/upstream-dev-ci.yaml
@@ -77,7 +77,7 @@ jobs:
         if: success()
         id: status
         run: |
-          python -m pytest -n 2 --timeout=60 -rf \
+          python -m pytest -n 2 -rf \
             --report-log output-${{ matrix.python-version }}-log.jsonl \
             || (
               echo '::set-output name=ARTIFACTS_AVAILABLE::true' && false
