--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -99,24 +99,25 @@ jobs:
   no-optional-deps:
     name: no-optional-deps
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
     steps:
       - uses: actions/checkout@v3
         with:
           # need to fetch all tags to get a correct version
           fetch-depth: 0  # fetch all branches and tags
-      - uses: conda-incubator/setup-miniconda@v2
-        with:
-          channels: conda-forge
-          mamba-version: "*"
-          activate-environment: cf_xarray_test
-          auto-update-conda: false
-          python-version: ${{ matrix.python-version }}
       - name: Set up conda environment
-        shell: bash -l {0}
+        uses: mamba-org/provision-with-micromamba@v14
+        with:
+          environment-file: ci/environment-no-optional-deps.yml
+          environment-name: cf_xarray_test
+          cache-env: true
+          extra-specs: |
+            python="${{ matrix.python-version }}"
+      - name: Install cf_xarray
         run: |
-          mamba env update -f ci/environment-no-optional-deps.yml
-          python -m pip install -e .
-          conda list
+          python -m pip install --no-deps -e .
       - name: Run Tests
         shell: bash -l {0}
         run: |
