--- a/setup.cfg
+++ b/setup.cfg
@@ -117,7 +117,7 @@ test = pytest
 nobeep = True
 
 [rstcheck]
-report=warning
+report_level=warning
 ignore_roles=pr,issue,py:meth,py:attr
-ignore_directives=ipython,autodata,csv-table
+ignore_directives=ipython,autodata,csv-table,autosummary
 ignore_messages=(is not referenced\.$)
