--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -122,3 +122,41 @@ jobs:
         shell: bash -l {0}
         run: |
           pytest -n 2
+
+  mypy:
+    name: mypy
+    runs-on: "ubuntu-latest"
+    defaults:
+      run:
+        shell: bash -l {0}
+    env:
+      PYTHON_VERSION: "3.10"
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Fetch all history for all branches and tags.
+      - name: Set up conda environment
+        uses: mamba-org/provision-with-micromamba@v14
+        with:
+          environment-file: ci/environment.yml
+          environment-name: cf_xarray_test
+          cache-env: true
+          extra-specs: |
+            python="${{ env.PYTHON_VERSION }}"
+      - name: Install cf_xarray
+        run: |
+          python -m pip install --no-deps -e .
+      - name: Install mypy
+        run: |
+          python -m pip install 'mypy'
+      - name: Run mypy
+        run: |
+          python -m mypy --install-types --non-interactive --cobertura-xml-report mypy_report cf_xarray/
+      - name: Upload mypy coverage to Codecov
+        uses: codecov/codecov-action@v3.1.1
+        with:
+          file: mypy_report/cobertura.xml
+          flags: mypy
+          env_vars: PYTHON_VERSION
+          name: codecov-umbrella
+          fail_ci_if_error: false
