--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,21 +2,17 @@ ci:
     autoupdate_schedule: quarterly
 
 repos:
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.11.4
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    # Ruff version.
+    rev: 'v0.0.235'
     hooks:
-      - id: isort
-        files: .+\.py$
+      - id: ruff
+        args: ["--fix"]
 
   - repo: https://github.com/psf/black
     rev: 22.12.0
     hooks:
       - id: black
-
-  - repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
-    hooks:
-      - id: flake8
 
   - repo: https://github.com/rstcheck/rstcheck
     rev: v6.1.1
@@ -37,8 +33,8 @@ repos:
     hooks:
         - id: nbqa-black
         - id: nbqa-pyupgrade
-          args: [--py37-plus]
-        - id: nbqa-isort
+          args: [--py38-plus]
+        - id: nbqa-ruff
         - id: nbqa
           entry: nbqa mdformat
           name: nbqa-mdformat
@@ -59,6 +55,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-toml
       - id: check-yaml
+      - id: debug-statements
 
   - repo: https://github.com/keewis/blackdoc
     rev: v0.3.8
