--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,12 +39,36 @@ fallback_version = "999"
 [tool.black]
 target-version = ["py38"]
 
-[tool.isort]
-profile = "black"
-skip_gitignore = true
-float_to_top = false
-known_first_party = "cf_xarray"
-known_third_party = [
+[tool.ruff]
+target-version = "py38"
+builtins = ["ellipsis"]
+exclude = [
+    ".eggs",
+    "doc",
+]
+# E402: module level import not at top of file
+# E501: line too long - let black worry about that
+# E731: do not assign a lambda expression, use a def
+ignore = [
+    "E402",
+    "E501",
+    "E731",
+]
+select = [
+    # Pyflakes
+    "F",
+    # Pycodestyle
+    "E",
+    "W",
+    # isort
+    "I",
+    # Pyupgrade
+    "UP",
+]
+
+[tool.ruff.isort]
+known-first-party = ["cf_xarray"]
+known-third-party = [
     "dask",
     "matplotlib",
     "numpy",
