--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,8 @@ exclude cf_xarray/_version.py
 
 prune ci
 prune doc
+prune cf_xarray/scripts
+prune cf_xarray/tests
 prune *.egg-info
 prune .binder/
 prune .github/
