--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires-python = ">=3.8"
 license = {file = "LICENSE"}
 keywords = ["xarray", "metadata", "CF conventions"]
 classifiers = [
-    "Development Status :: 6 - Mature",
+    "Development Status :: 5 - Production/Stable",
     "License :: OSI Approved :: Apache License",
     "Natural Language :: English",
     "Operating System :: OS Independent",
