--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -75,7 +75,7 @@ jobs:
         uses: pypa/gh-action-pypi-publish@v1.6.4
         with:
           user: __token__
-          password: ${{ secrets.TESTPYPI_TOKEN }}
+          password: ${{ secrets.TEST_PYPI_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
           verbose: true
 
