--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -78,6 +78,8 @@ jobs:
           password: ${{ secrets.TEST_PYPI_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
           verbose: true
+          secrets:
+            TEST_PYPI_TOKEN: ${{ secrets.TEST_PYPI_TOKEN }}
 
 
   upload-to-pypi:
@@ -95,3 +97,5 @@ jobs:
           user: __token__
           password: ${{ secrets.PYPI_PASSWORD }}
           verbose: true
+        secrets:
+          PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
