--- a/.github/workflows/testpypi-release.yaml
+++ b/.github/workflows/testpypi-release.yaml
@@ -88,3 +88,5 @@ jobs:
           password: ${{ secrets.TEST_PYPI_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
           verbose: true
+        secrets:
+          TEST_PYPI_TOKEN: ${{ secrets.TEST_PYPI_TOKEN }}
