--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -74,7 +74,7 @@ jobs:
         if: github.event_name == 'push'
         uses: pypa/gh-action-pypi-publish@v1.6.4
         with:
-          password: ${{ secrets.TEST_PYPI_TOKEN }}
+          password: ${{ secrets.TESTPYPI_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
           verbose: true
 
