Migrate to pyproject.toml, ruff, add build CI (#400)
Closes #209

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,10 @@
 graft cf_xarray/data
 exclude cf_xarray/_version.py
 
+graft cf_xarray/scripts
 prune ci
 prune doc
+prune cf_xarray/tests
 prune *.egg-info
 prune .binder/
 prune .github/
