--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
 ]
 dynamic = ["version"]
 
+[project.optional-dependencies]
+all = ["matplotlib", "pint", "shapely"]
+
 [project.urls]
 homepage = "https://cf-xarray.readthedocs.io"
 documentation = "https://cf-xarray.readthedocs.io"
