--- a/.github/workflows/upstream-dev-ci.yaml
+++ b/.github/workflows/upstream-dev-ci.yaml
@@ -46,6 +46,8 @@ jobs:
         run: |
           python -m pip install --no-deps -e .
       - name: Run Tests
+        if: success()
+        id: status
         run: |
           pytest -rf -n auto --cov=./ --cov-report=xml \
             --report-log output-${{ matrix.python-version }}-log.jsonl
