Add  pre-commit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -65,3 +65,8 @@ repos:
     hooks:
       - id: blackdoc
         files: .+\.py$
+
+  - repo: https://github.com/citation-file-format/cff-converter-python
+    rev: ebf0b5e44d67f8beaa1cd13a0d0393ea04c6058d
+    hooks:
+    - id: validate-cff
