Try pytest-pretty

--- a/ci/upstream-dev-env.yml
+++ b/ci/upstream-dev-env.yml
@@ -11,7 +11,8 @@ dependencies:
   - pandas
   - pooch
   - shapely
-  - pip:
+  - pip
+    - pytest-pretty
     - git+https://github.com/pydata/xarray
     - git+https://github.com/dcherian/flox
     - git+https://github.com/hgrecco/pint
