--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,9 @@ concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  COLUMNS: 120
+
 jobs:
   build:
     name: Build (${{ matrix.python-version }}, ${{ matrix.os }})
