added link to regex package in docs and regex to doc env

--- a/ci/doc.yml
+++ b/ci/doc.yml
@@ -18,6 +18,7 @@ dependencies:
   - pandas
   - pooch
   - pint
+  - regex
   - furo
   - pip:
       - git+https://github.com/xarray-contrib/cf-xarray
