--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 include-package-data = false
-packages = ["cf_xarray", "cf_xarray.scripts"]
+packages = ["cf_xarray", "cf_xarray.data", "cf_xarray.scripts"]
 
 [tool.setuptools.dynamic]
 version = {attr = "cf_xarray.__version__"}
