--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest"]
-        python-version: ["3.9", "3.11"]
+        python-version: ["3.8", "3.11"]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -116,8 +116,6 @@ jobs:
           environment-file: ci/environment-no-optional-deps.yml
           environment-name: cf_xarray_test
           cache-env: true
-          extra-specs: |
-            python="${{ matrix.python-version }}"
       - name: Install cf_xarray
         run: |
           python -m pip install --no-deps -e .
@@ -132,8 +130,9 @@ jobs:
     defaults:
       run:
         shell: bash -l {0}
-    env:
-      PYTHON_VERSION: "3.11"
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.11"]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -145,7 +144,7 @@ jobs:
           environment-name: cf_xarray_test
           cache-env: true
           extra-specs: |
-            python="${{ env.PYTHON_VERSION }}"
+            python="${{ matrix.python-version }}"
       - name: Install cf_xarray
         run: |
           python -m pip install --no-deps -e .
