--- a/.github/workflows/upstream-dev-ci.yaml
+++ b/.github/workflows/upstream-dev-ci.yaml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.11"]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -42,9 +42,9 @@ jobs:
         with:
           environment-file: ci/upstream-dev-env.yml
           environment-name: cf_xarray_test
+          cache-env: False
           extra-specs: |
             python="${{ matrix.python-version }}"
-            pytest-reportlog
       - name: Install cf_xarray
         run: |
           python -m pip install --no-deps -e .
