--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
 dynamic = ["version"]
 
 [project.optional-dependencies]
-all = ["matplotlib", "pint", "shapely", "regex"]
+all = ["matplotlib", "pint", "shapely", "regex", "rich"]
 
 [project.urls]
 homepage = "https://cf-xarray.readthedocs.io"
