--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,20 +1,17 @@
-# Required
 version: 2
 
 build:
-  os: 'ubuntu-20.04'
+  os: ubuntu-22.04
   tools:
-    python: 'mambaforge-4.10'
+    python: mambaforge-4.10
+  jobs:
+    post_checkout:
+      - (git --no-pager log --pretty="tformat:%s" -1 | grep -vqF "[skip-rtd]") || exit 183
+    pre_install:
+      - conda list sphinx
+      - conda list cf_xarray
 
-# Build documentation in the docs/ directory with Sphinx
-sphinx:
-  configuration: doc/conf.py
-
-# Optionally set the version of Python and requirements required to build your docs
 conda:
-    environment: ci/doc.yml
+  environment: ci/doc.yml
 
-python:
-  install:
-    - method: pip
-      path: .
+formats: []
