--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,7 +42,7 @@ jobs:
           environment-name: cf_xarray_test
           cache-environment: true
           create-args: >-
-            python="${{ matrix.python-version }}"
+            python=${{ matrix.python-version }}
       - name: Install cf_xarray
         run: |
           python -m pip install --no-deps -e .
@@ -103,7 +103,7 @@ jobs:
           environment-name: cf_xarray_test
           cache-environment: true
           create-args: >-
-            python="${{ matrix.python-version }}"
+            python=${{ matrix.python-version }}
       - name: Install cf_xarray
         run: |
           python -m pip install --no-deps -e .
