Switch to setup-micromamba (#476)
* Switch to setup-micromamba

* Update .github/workflows/ci.yaml

* fix?

* last one!

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,13 +36,13 @@ jobs:
         run: |
           echo "PYTHON_VERSION=${{ matrix.python-version }}" >> $GITHUB_ENV
       - name: Set up conda environment
-        uses: mamba-org/provision-with-micromamba@v15
+        uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: ci/environment.yml
           environment-name: cf_xarray_test
-          cache-env: true
-          extra-specs: |
-            python="${{ matrix.python-version }}"
+          cache-environment: true
+          create-args: >-
+            python=${{ matrix.python-version }}
       - name: Install cf_xarray
         run: |
           python -m pip install --no-deps -e .
@@ -70,11 +70,11 @@ jobs:
           # need to fetch all tags to get a correct version
           fetch-depth: 0  # fetch all branches and tags
       - name: Set up conda environment
-        uses: mamba-org/provision-with-micromamba@v15
+        uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: ci/environment-no-optional-deps.yml
           environment-name: cf_xarray_test
-          cache-env: true
+          cache-environment: true
       - name: Install cf_xarray
         run: |
           python -m pip install --no-deps -e .
@@ -97,13 +97,13 @@ jobs:
         with:
           fetch-depth: 0 # Fetch all history for all branches and tags.
       - name: Set up conda environment
-        uses: mamba-org/provision-with-micromamba@v15
+        uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: ci/environment.yml
           environment-name: cf_xarray_test
-          cache-env: true
-          extra-specs: |
-            python="${{ matrix.python-version }}"
+          cache-environment: true
+          create-args: >-
+            python=${{ matrix.python-version }}
       - name: Install cf_xarray
         run: |
           python -m pip install --no-deps -e .
