list env explicitly

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,6 +10,7 @@ build:
     pre_install:
       - conda list sphinx
       - conda list cf_xarray
+      - conda list
 
 conda:
   environment: ci/doc.yml
